crates/solidity/testing/snapshots/bindings_output/contracts/virtual_methods/generated/v2/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
   ╭─[input.sol:5:27]
   │
 5 │ ╭─▶     function foo() public pure virtual returns (string memory) {
   ┆ ┆   
 7 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:11:27]
    │
 11 │ ╭─▶     function foo() public pure virtual override(A) returns (string memory) {
    ┆ ┆   
 13 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:17:27]
    │
 17 │ ╭─▶     function foo() public pure virtual override returns (string memory) {
    ┆ ┆   
 19 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯
Error: Expected OpenBrace or ReturnsKeyword or Semicolon.
    ╭─[input.sol:24:27]
    │
 24 │ ╭─▶     function foo() public pure override(B, C) returns (string memory) {
    ┆ ┆   
 26 │ ├─▶     }
    │ │           
    │ ╰─────────── Error occurred here.
────╯

------------------------------------------------------------------------

Definitions (4):
- Def: #1 ["A" @ input.sol:4:10] (contract)
- Def: #2 ["B" @ input.sol:10:10] (contract)
- Def: #3 ["C" @ input.sol:16:10] (contract)
- Def: #4 ["D" @ input.sol:22:10] (contract)

------------------------------------------------------------------------

References (4):
- Ref: ["A" @ input.sol:10:15] -> #1
- Ref: ["A" @ input.sol:16:15] -> #1
- Ref: ["B" @ input.sol:22:15] -> #2
- Ref: ["C" @ input.sol:22:18] -> #3

------------------------------------------------------------------------

Unbound identifiers (4):
- ???: ["foo" @ input.sol:5:14]
- ???: ["foo" @ input.sol:11:14]
- ???: ["foo" @ input.sol:17:14]
- ???: ["foo" @ input.sol:24:14]

------------------------------------------------------------------------

Bindings: 
    ╭─[input.sol:1:1]
    │
  4 │ contract A {
    │          ┬  
    │          ╰── name: 1
  5 │     function foo() public pure virtual returns (string memory) {
    │              ─┬─  
    │               ╰─── ???
    │ 
 10 │ contract B is A {
    │          ┬    ┬  
    │          ╰─────── name: 2
    │               │  
    │               ╰── ref: 1
 11 │     function foo() public pure virtual override(A) returns (string memory) {
    │              ─┬─  
    │               ╰─── ???
    │ 
 16 │ contract C is A {
    │          ┬    ┬  
    │          ╰─────── name: 3
    │               │  
    │               ╰── ref: 1
 17 │     function foo() public pure virtual override returns (string memory) {
    │              ─┬─  
    │               ╰─── ???
    │ 
 22 │ contract D is B, C {
    │          ┬    ┬  ┬  
    │          ╰────────── name: 4
    │               │  │  
    │               ╰───── ref: 2
    │                  │  
    │                  ╰── ref: 3
    │ 
 24 │     function foo() public pure override(B, C) returns (string memory) {
    │              ─┬─  
    │               ╰─── ???
────╯
